feat: optimize user logic
